# pydantic_review

./: pyproject.toml
sections/section_01/: .env  .env.prod  part_01.py  part_02.py  part_03.py  part_04.py  part_05.py  part_06.py  part_07.py  part_08.py  part_09.py  part_10.py  part_11.py  part_12.py
